k8s/app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: task-app
  namespace: devops-project

spec:

  replicas: 2

  selector:
    matchLabels:
      app: task-app

  template:

    metadata:
      labels:
        app: task-app

      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: "/metrics"

    spec:

      containers:
      - name: task-app

        image: harishkumar09/task-app:v2

        ports:
        - containerPort: 3000
