k8s/app/app-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: task-app-service
  namespace: devops-project
  labels:
    app: task-app
spec:

  selector:
    app: task-app

  ports:
  - name: http
    port: 80
    targetPort: 3000

  type: ClusterIP
