k8s/app/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: task-app-ingress
  namespace: devops-project

spec:

  ingressClassName: nginx

  rules:
  
  - host: app.rharishkumar.in
      
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: task-app-service

            port:
              number: 80
