k8s/app/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
 
metadata:
  name: monitoring-ingress
  namespace: monitoring
 
spec:
 
  ingressClassName: nginx
 
  rules:
 
  - host: grafana.rharishkumar.in
 
    http:
 
      paths:
      - path: /
        pathType: Prefix
 
        backend:
          service:
            name: monitoring-grafana
 
            port:
              number: 80
 
  - host: prometheus.rharishkumar.in
 
    http:
 
      paths:
      - path: /
        pathType: Prefix
 
        backend:
          service:
            name: monitoring-kube-prometheus-prometheus
 
            port:
              number: 9090
